# PDFTwice

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html
.github/workflows/: release.yml
app/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
app/public/samples/: Sample4.pdf.docx
app/src/: App.jsx  PDFViewer.jsx  SideBySidePDF.jsx  index.css  main.jsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: AnnotationsPanel.jsx  BookmarksPanel.jsx  ErrorBoundary.jsx  SidePanel.jsx
app/src/components/PDFViewer/: AnnotationOverlay.jsx  SearchPanel.jsx  SelectionPopover.jsx  UploadZone.jsx  index.js
app/src/components/PDFViewer/Toolbar/: FileInfo.jsx  PageNavigation.jsx  PanelsMenu.jsx  SettingsMenu.jsx  UtilityButtons.jsx  ZoomControls.jsx  index.js
app/src/context/: ActionTypes.js  EventBus.js  PDFViewerContext.jsx
app/src/hooks/: index.js  useAnnotations.js  useBookmarks.js  useClickOutside.js  useScrollSync.js  useTextSelection.js  useZoom.js
app/src/styles/: variables.css
app/src/utils/: RenderingQueue.js  TextHighlighter.js  TextLayerSelectionManager.js  index.js  pdfExport.js  pdfImageAltText.js  scrollUtils.js  textNormalization.js
assets/: index-4_qZcm2C.css  index-Bgd3KXN-.js  index-Bib1jmoJ.css  index-C9VF6HER.js  index-CNxyTeU9.css  index-DIuBaMq5.js
