[package]
name = "twice-pdf"
version = "1.1.0"
description = "Dual PDF viewer"
authors = ["PlusKits"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/PlusKits/Twice-PDF"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "twice_pdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["devtools"] }
tauri-plugin-log = "2"
chrono = "0.4"
tauri-plugin-opener = "2.5.3"
